--- a/_posts/2017-12-11-spa.md
+++ b/_posts/2017-12-11-spa.md
@@ -1,6 +1,6 @@
 ---
 title: "Introdução a Single Page Application"
-tags: vídeo
+tags: vídeo web
 ---
 
 Neste vídeo apresento os conceito básicos de como são criadas as Single Page Applications.
