--- a/_posts/2018-10-22-tdd.md
+++ b/_posts/2018-10-22-tdd.md
@@ -1,6 +1,6 @@
 ---
 title: "Desenvolvimento de software guiado por testes"
-tags: artigo
+tags: artigo tdd
 ---
 
 Entenda neste artigo como o desenvolvimento guiado por testes pode contribuir para o sucesso de seu próximo projeto.
