--- a/_posts/2019-09-09-por-que-fp.md
+++ b/_posts/2019-09-09-por-que-fp.md
@@ -1,6 +1,6 @@
 ---
 title: "Por que me interessei por programação funcional"
-tags: artigo
+tags: artigo programaçãofuncional
 ---
 
 Neste artigo compartilho os motivos que despertaram meu interesse em estudar programação funcional.
