--- a/_posts/2019-11-24-juntas.md
+++ b/_posts/2019-11-24-juntas.md
@@ -1,6 +1,6 @@
 ---
 title: "Juntas: o poder da liderança compartilhada nos negócios"
-tags: podcast
+tags: podcast liderança
 ---
 
 Quinto episódio do podcast sobre livros. Desta vez falando sobre o Juntas: o poder da liderança compartilhada nos negócios.
