--- a/_posts/2020-03-16-tdd.md
+++ b/_posts/2020-03-16-tdd.md
@@ -1,6 +1,6 @@
 ---
 title: "TDD - Desenvolvimento Guiado Por Testes"
-tags: podcast tdd
+tags: podcast podcast-segunda.tech tdd
 ---
 
 Podcast falando sobre o livro TDD - Desenvolvimento Guiado Por Testes.
